NetBSD Problem Report #45892

From root@duzan.org  Tue Jan 31 02:13:57 2012
Return-Path: <root@duzan.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id A645363B8C5
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 31 Jan 2012 02:13:57 +0000 (UTC)
Message-Id: <20120131021402.413D935C5CA4@capo.localdomain>
Date: Mon, 30 Jan 2012 21:14:02 -0500 (EST)
From: gary@duzan.org
Reply-To: gary@duzan.org
To: gnats-bugs@gnats.NetBSD.org
Subject: System freeze with video effects
X-Send-Pr-Version: 3.95

>Number:         45892
>Category:       port-amd64
>Synopsis:       System freeze with video effects
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    chs
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 31 02:15:00 +0000 2012
>Closed-Date:    Sat Feb 11 19:00:26 +0000 2012
>Last-Modified:  Sat Feb 11 19:20:02 +0000 2012
>Originator:     Gary Duzan
>Release:        NetBSD 5.99.60, Fri Jan 27
>Organization:
	n/a
>Environment:
System: NetBSD capo 5.99.60 NetBSD 5.99.60 (GENERIC) #34: Fri Jan 27 08:06:04 EST 2012 root@capo:/usr/obj/sys/arch/amd64/compile.amd64/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	System hangs under heavy activity. Problems visible under X or on console.
>How-To-Repeat:
	Typical scenario is browsing using Firefox, screen is covered with vertical
	stripes, and system is non-responsive. Similar video effects when freezing
	on console.
>Fix:
	Commenting out the section of sys/arch/amd64/include/types.h with
	__HAVE_DIRECT_MAP, __HAVE_MM_MD_DIRECT_MAPPED_IO, etc., makes the
	system much more stable.

>Release-Note:

>Audit-Trail:
From: Gary Duzan <gary@duzan.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-amd64/45892: System freeze with video effects
Date: Mon, 30 Jan 2012 21:17:12 -0500

    See also the current-users thread,

 Subject: System freeze w/display strangeness on amd64/current

 starting in December, 2012.

From: Gary Duzan <gary@duzan.org>
To: gnats-bugs@NetBSD.org
Cc: port-amd64-maintainer@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: Re: port-amd64/45892: System freeze with video effects
Date: Mon, 30 Jan 2012 21:22:18 -0500

 In Message <20120131022005.473E863B8C5@www.NetBSD.org>,
    Gary Duzan <gary@duzan.org>wrote:

 =>    See also the current-users thread,
 => 
 => Subject: System freeze w/display strangeness on amd64/current
 => 
 => starting in December, 2012.

    That would have been a trick. Make that 2011. *sigh*



Added by mbalmer:

My amd64 machine resets during startup when direct map is enabled.
When I disable acpi, it does not reset, but hang.  This is without starting
X.



Responsible-Changed-From-To: port-amd64-maintainer->chs
Responsible-Changed-By: chs@NetBSD.org
Responsible-Changed-When: Mon, 06 Feb 2012 17:56:11 +0000
Responsible-Changed-Why:
this appears to be triggered by the direct-map changes.


State-Changed-From-To: open->closed
State-Changed-By: chs@NetBSD.org
State-Changed-When: Sat, 11 Feb 2012 19:00:26 +0000
State-Changed-Why:
fixed by rev. 1.164 of x86/pmap.c


From: "Chuck Silvers" <chs@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45892 CVS commit: src/sys/arch/x86/x86
Date: Sat, 11 Feb 2012 18:59:42 +0000

 Module Name:	src
 Committed By:	chs
 Date:		Sat Feb 11 18:59:41 UTC 2012

 Modified Files:
 	src/sys/arch/x86/x86: pmap.c

 Log Message:
 zero out the unused parts of direct-map page-table pages.
 these seem to cause problems even though they aren't actually referenced,
 probably due to speculative execution.
 fixes PR 45892.


 To generate a diff of this commit:
 cvs rdiff -u -r1.163 -r1.164 src/sys/arch/x86/x86/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.