zero out the unused parts of direct-map page-table pages. these seem to cause problems even though they aren't actually referenced, probably due to speculative execution. fixes PR 45892.